--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 	<h1>Virtual Experiments</h1>
