--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,8 +8,8 @@
   <div class="center">
 	<h1>Virtual Experiments</h1>
 	<h2>Please Select one of the following to view the behavior</h2>
-	<a href="images/111.jpg" target="_blank">Aluminum-Magnesium</a><br>
-	<a href="images/fg.jpg" target="_blank">Nickel</a><br>
+	<a href="images/111.jpg" target="_blank">Aluminum-Magnesium</a><br><br>
+	<a href="images/fg.jpg" target="_blank">Nickel</a><br><br>
 	<a href="images/micro3.jpg" target="_blank">Conclusions</a>
 	</div>
 	
